# hierarchical_clustering

./: .gitignore  README.md  environment.yml  hierarchical_clustering.py  pyproject.toml
.github/workflows/: ci.yml
examples/: run_clustering.py
optim_vec2gc/: MEMORY_ANALYSIS.md  Vec2GC_StepByStep_Analysis.ipynb  main.py  vec2gc.py  vec2gc_ver2.py  vec2gc_ver3.py
src/vec2gc/: README.md  __init__.py  embeddings.py  graph_builders.py  main.py  recursive_clustering.py  vec2gc.py
tests/: test_import.py  test_smoke.py
vec2gc/: DEPRECATED.md  README.md  embeddings.py  main.py  vec2gc.py
